Fix bubble background flicker on iOS

--- a/src/components/Courses/Courses.module.css
+++ b/src/components/Courses/Courses.module.css
@@ -31,17 +31,16 @@
 }
 
 .TermNameSelect {
-    margin-left: 8px;
-    padding: 4px;
+    margin-left: 6px;
 }
 
 .TermNameSelectWrapper {
     max-width: 1000px;
     width: 80%;
-    margin: 18px auto 0 auto;
+    margin: 16px auto 0 auto;
     display: flex;
     align-items: center;
-    font-size: 22px;
+    font-size: 18px;
 }
 
 .Min768TableCell {
@@ -58,7 +57,7 @@
     }
 
     .Table {
-        margin: 32px auto 0 auto;
+        margin: 16px auto 0 auto;
     }
 
     .TableHeader {
@@ -66,13 +65,12 @@
     }
 
     .TermNameSelect {
-        padding: 0;
+        margin-left: 8px;
     }
 
     .TermNameSelectWrapper {
         max-width: none;
         width: 100%;
         margin: 0;
-        font-size: inherit;
     }
 }
