--- a/src/shared/userInterfaces/BubbleBackground/BubbleBackground.module.css
+++ b/src/shared/userInterfaces/BubbleBackground/BubbleBackground.module.css
@@ -18,6 +18,7 @@
     animation-duration: calc(125s / var(--i));
     animation-delay: calc(30s / var(--j));
     transform: scale(0);
+    top: 110%;
 }
 
 .Bubble:nth-child(2n) {
@@ -43,12 +44,8 @@
 }
 
 @keyframes float {
-    0% {
-        top: 100%;
-        transform: translateY(0px) scale(0);
-    }
     100% {
-        top: 0%;
-        transform: translateY(-100px) scale(1);
+        top: -15%;
+        transform: scale(1);
     }
 }
